# ProjectLife

./: CMakeLists.txt  README.md
documentation/html/: annotated.html  canvas_8h_source.html  class_canvas-members.html  class_canvas.html  class_life-members.html  class_life.html  classes.html  classlife_1_1_cell-members.html  classlife_1_1_cell.html  classlife_1_1_coordenada-members.html  classlife_1_1_coordenada.html  common_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  life_8h_source.html  lodepng_8h_source.html  menudata.js  struct_lode_p_n_g_color_mode-members.html  struct_lode_p_n_g_color_mode.html  struct_lode_p_n_g_color_profile-members.html  struct_lode_p_n_g_color_profile.html  struct_lode_p_n_g_compress_settings-members.html  struct_lode_p_n_g_compress_settings.html  struct_lode_p_n_g_decoder_settings-members.html  struct_lode_p_n_g_decoder_settings.html  struct_lode_p_n_g_decompress_settings-members.html  struct_lode_p_n_g_decompress_settings.html  struct_lode_p_n_g_encoder_settings-members.html  struct_lode_p_n_g_encoder_settings.html  struct_lode_p_n_g_info-members.html  struct_lode_p_n_g_info.html  (+6 more)
documentation/latex/: annotated.tex  class_canvas.tex  class_life.tex  classlife_1_1_cell.tex  classlife_1_1_coordenada.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  (+12 more)
include/: canvas.h  canvasa.h  common.h  life.h
outputs/: out.txt
src/: life.cpp  main.cpp
(+25 files in other folders)
